# limin

./: Cargo.toml  build.rs  test.lmn
lib/: rt.c
lib/std/: io.lmn
limin_test/: other.lmn  test.lmn
src/: ast.rs  codegen.rs  common.rs  compiler.rs  error.rs  hir.rs  infer.rs  key_table.rs  lexer.rs  lir.rs  llvm.rs  lower.rs  main.rs  parser.rs  source.rs  type_check.rs  util.rs
src/emit/: builder.rs  emit.rs  ilir.rs  lir.rs  llvm.rs  mod.rs  trace_roots.rs
src/lowering/: hir.rs  lower.rs  mir.rs  mod.rs  monomorphize.rs  type_check.rs
src/lowering/type_check/: collect_fields.rs  collect_function_bodies.rs  collect_functions.rs  collect_struct_prototypes.rs  collect_structs.rs  collect_types.rs  mod.rs
src/parsing/: ast.rs  lexer.rs  mod.rs  parser.rs
test/test_files/: included.lmn  test_closures.lmn  test_divergent_if_else.lmn  test_foreign_impl.lmn  test_functions.lmn  test_generic_function.lmn  test_generic_struct.lmn  test_if_else.lmn  test_impl_generic.lmn  test_impl_generic_variant.lmn  test_inherent_impl.lmn  test_mod.lmn  test_new.lmn  test_nonlocal_infer_function.lmn  test_nonlocal_infer_function_explicit.lmn  test_simple.lmn  test_struct.lmn  test_trait_impl.lmn
