[package]
name = "limin"
version = "0.1.0"
edition = "2021"

[build-dependencies]
fs_extra = "1.3.0"

[dependencies]
dunce = "1.0.2"
unicode-ident = "1.0.5"
clap = { version = "4.2.1", features = ["derive"] }
semver = "1.0.17"
typed-arena = "2.0.2"

# this will make a fine addition to my collection collection
phf = { version = "0.11.1", features = ["macros"] }
indexmap = "1.9.3"
slotmap = "1.0.6"
dlv-list = "0.5.0"