[package]
name = "limin"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "debuginfo"

[build-dependencies]
fs_extra = "1.3.0"

[dev-dependencies]
tempfile = "3.5.0"

[dependencies]
dunce = "1.0.2"
unicode-ident = "1.0.5"
clap = { version = "4.2.1", features = ["derive"] }
semver = "1.0.17"

# this will make a fine addition to my collection collection
typed-arena = "2.0.2"
phf = { version = "0.11.1", features = ["macros"] }
indexmap = "2.0.0"
slotmap = "1.0.6"